Some performance and API improvements